inserito addEventListener al click per verificare se l'email inserita è presente nella lista.

--- a/mail/index.html
+++ b/mail/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Dadi e cercare in un Array</title>
+    <title>JS Cerca l'email</title>
 </head>
 <body>
     
+    <main>
+        <h1>
+            Inserisci l'email corretta
+        </h1>
 
+        <div>
+            <input type="email" id="email-utente">
+            <button id="verifica-email">Invia</button>
+        </div>
+    </main>
 
 
     <script src="./js/script.js"></script>
